psp-migration/add-apparmor/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: add-apparmor-annotations
policies:
- ../add-apparmor.yaml
resources:
- resource.yaml
results:
- kind: Pod
  patchedResources: patchedResource1.yaml
  policy: add-apparmor-annotations
  resources:
  - pod01
  result: pass
  rule: apparmor-runtime-default
- kind: Pod
  patchedResources: patchedResource2.yaml
  policy: add-apparmor-annotations
  resources:
  - pod02
  result: pass
  rule: apparmor-runtime-default
